--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>RSS Feed</title>
+	<link rel="alternate" type="application/rss+xml" title="My Test Feed" href="http://shivanandbg28.github.io/index.xml"/>
 </head>
 <body>
 <h1>Welcome to understand how RSS Feed works</h1>
