--- a/blog.html
+++ b/blog.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RSS Feed</title>
-	<link rel="alternate" type="application/rss+xml" title="My Test Feed" href="http://shivanandbg28.github.io/index.xml"/>
+	<title>Homepage</title>
 </head>
 <body>
-<h1>Welcome to understand how RSS Feed works</h1>
+<h1>Welcome to the blog </h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-<a href="blog.html">Proceed to blog</a>
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </body>
 </html>
