--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>RSS Feed</title>
-	<link rel="alternate" type="application/rss+xml" title="My Test Feed" href="http://shivanandbg28.github.io/index.xml"/>
+	<atom:link href="https://shivanandbg28.github.io/index.xml" rel="self" type="application/rss+xml" />
+
 </head>
 <body>
 <h1>Welcome to understand how RSS Feed works</h1>
@@ -13,5 +14,7 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 <a href="blog.html">Proceed to blog</a>
+<atom:link href="https://shivanandbg28.github.io/index.xml" type="application/rss+xml" />
+
 </body>
 </html>
