--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 <a href="blog.html">Proceed to blog</a>
+<a href="blog1.html">Proceed to blog</a>
 <atom:link href="https://shivanandbg28.github.io/index.xml" type="application/rss+xml" />
 
 </body>
